# DevPulse

./: .env.example  .gitignore  README-WINDOWS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  forms.py  models.py  serializers.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/ingestion/: admin.py  apps.py  build_views.py  models.py  parsers.py  serializers.py  signature.py  tasks.py  urls.py  views.py
backend/apps/ingestion/fixtures/: github_workflow_run.json  gitlab_pipeline.json
backend/apps/ingestion/management/commands/: simulate_webhook.py
backend/apps/ingestion/migrations/: 0001_initial.py  0002_buildevent_webhook_delivery_and_more.py
backend/apps/organizations/: admin.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/organizations/management/commands/: load_demo_seed.py
backend/apps/organizations/migrations/: 0001_initial.py  0002_project_webhook_secret.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  test.py
backend/data/: demo_seed.json
backend/tests/: factories.py  test_auth.py  test_builds_api.py  test_demo_seed.py  test_ingestion_models.py  test_models.py  test_orgs_api.py  test_parsers.py  test_permissions.py  test_settings_auth.py  test_webhooks.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: auth.ts  (+3 more)
(+19 files in other folders)
