[project]
name = "devpulse-backend"
version = "0.1.0"
description = "DevPulse API"
requires-python = ">=3.12"
dependencies = [
    "Django~=5.0",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.3.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "django-cors-headers>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "apps*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
